@@ -5,6 +5,7 @@ apt (0.9.8.3) UNRELEASED; urgency=low
   * remove -ldl from cdrom and -lutil from apt-get linkage
   * rewrite pkgOrderList::DepRemove to stop incorrect immediate setting
     (Closes: 645713)
+  * prefer Essentials over Removals in ordering score
 
  -- David Kalnischkies <kalnischkies@gmail.com>  Sun, 09 Jun 2013 15:06:24 +0200
 
